2008-03-29  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui-vtable.c (gui_display_create): remove temporary
	"object" variable, it's prefectly fine to say GIMP_DISPLAY() on a
	NULL pointer.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* configure.in: add -Wold-style-definition to CFLAGS.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* libgimp/gimpprocview.c (gimp_proc_view_new): code cleanup.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* libgimpmath/gimpmd5.[ch]: removed implementation of the MD5
	algorithm and delegate to GChecksum instead.
	
	* libgimpmath/Makefile.am
	* libgimpmath/test-md5.c: removed test of the MD5 implementation.

2008-03-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c (lcms_calculate_checksum): fixed use of
	GChecksum.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* libgimpmath/gimpmd5.c: undef GIMP_DISABLE_DEPRECATED.

2008-03-29  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui-vtable.c: <gdk/gdkx.h> needs #ifdef GDK_WINDOWING_X11.

	* app/gui/gui.c: remove the include i accidentially added here.

2008-03-29  Mukund Sivaraman  <muks@mukund.org>

	* app/core/gimpdrawable-operation.c: Use #warning only if
	compiler is gcc.

2008-03-29  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/imagemap/imap_cmd_move.c
	* plug-ins/imagemap/imap_cmd_object_up.c
	* plug-ins/imagemap/imap_cmd_move_up.c
	* plug-ins/imagemap/imap_cmd_move_selected.c
	* plug-ins/imagemap/imap_cmd_move_sash.c
	* plug-ins/imagemap/imap_cmd_object_move.c
	* plug-ins/imagemap/imap_cmd_object_down.c
	* plug-ins/imagemap/imap_object.c
	* plug-ins/imagemap/imap_cmd_move_down.c
	* plug-ins/map-object/map-object-shade.c
	* plug-ins/map-object/map-object-apply.c
	* plug-ins/maze/maze.h
	* plug-ins/maze/maze_face.c
	* plug-ins/selection-to-path/selection-to-path.c
	* plug-ins/selection-to-path/edge.c
	* plug-ins/selection-to-path/pxl-outline.c
	* plug-ins/selection-to-path/fit.c
	* plug-ins/xjt/xjt.c
	* plug-ins/metadata/xmp-parse.c